# sdc-scissor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README.rst  USAGE.md  calc_data_stats.py  calc_sim_times_variances.py  competition.py  config.yaml  create_dataset.py  data_stats.py  evaluation_results.txt  experiments.py  pyproject.toml  requirements-37.txt  run_feature_extraction_tests.py  sample_config.yml  sdc-scissor-v2.py  sdc-scissor.py  setup.py  sonar-project.properties  start_up_wrapper.py  transform_results.py  verify_sim_time_variance.py
SBST2022/: LICENSE  LICENSE.md  README.md  competition.py  requirements.txt
code_pipeline/: beamng_executor.py  config.py  executors.py  feature_extraction.py  feature_extraction_test.py  road_geometry_calculator_test.py  test_generation_utils.py  tests_evaluation.py  tests_generation.py  validation.py  visualization.py
dbc_maps/: dbc_map_beamng.json  dbc_map_carla.json
docs/: api.rst  architecture.rst  code_of_conduct.rst  components.rst  conf.py  data.rst  demo.html  demo.rst  index.rst  installation.rst  machine_learning.md  machine_learning_api.rst  quick_start.md  requirements.txt  sdc_scissor_cli.rst  simulator_api.rst  test_execution.md  test_generation.md  usage.rst
documentation/: FAQ.md  GUIDELINES.md  INSTALL.md
feature_extraction/: angle_based_strategy.py  equi_distance_stategy_test.py  equi_distance_strategy.py  feature_extraction.py  maximum_angle_strategy.py  parameterized_uniform_strategy.py  road_geometry_calculator.py  road_geometry_calculator_test.py  segmentation_strategy.py
influxdb/: docker-compose.yml
refactored_pipeline/: main.py
sample_candb/: beamng_pipeline_sample.dbc
sample_conf/: conf_carla.yml  conf_parallels.yml  conf_sdc.yml
sample_configs/: evaluate-models.yml  extract-features.yml  gen-can-msg.yml  label-tests.yml
sample_test_generators/: README.md  deepjanus_seed_generator.py  manual_tests_generator.py  my_generator.py  one_test_generator.py  random_generator.py
sample_tests/: 0-test.json  00001_test.json  00002_test.json  00003_test.json  00004_test.json  1-test.json  10-test.json  100-test.json  101-test.json  102-test.json  103-test.json  104-test.json  105-test.json  106-test.json  107-test.json  108-test.json  109-test.json  11-test.json  110-test.json  111-test.json  112-test.json  113-test.json  114-test.json  115-test.json  116-test.json  117-test.json  118-test.json  119-test.json  12-test.json  120-test.json  121-test.json  (+175 more)
sdc_scissor/sdc_prioritizer/: Dockerfile.testPrioritization  README.md  requirements.txt  setup.cfg
sdc_scissor/sdc_prioritizer/code/: faultDetection.m  faultDetectionRatePlots.m  featureSelection.m  fitness.m  initialPopulation.m  main.m  mainGreedy.m  objectives.m  permutationCrossover.m  permutationMutation.m  plotResults.m  runGreedy.m  runMOSearch.m  runSearch.m
sdc_scissor/sdc_prioritizer/code/python/: make-single-csv.py
sdc_scissor/sdc_prioritizer/code/r-script/: analysis.R  gavsga.csv  medians_APFDc.csv  plot.R  table.R  utils.R  vsbl.csv  vsrand.csv
sdc_scissor/sdc_prioritizer/datasets/fullroad/: README.md
sdc_scissor/sdc_prioritizer/datasets/fullroad/BeamNG_AI/: README.md
sdc_scissor/sdc_prioritizer/datasets/fullroad/BeamNG_AI/BeamNG_RF_1/: BeamNG_RF_1_Complete.csv
sdc_scissor/sdc_prioritizer/datasets/fullroad/BeamNG_AI/BeamNG_RF_1_5/: BeamNG_RF_1_5_Complete.csv  BeamNG_RF_1_5_selected.csv  filter.py
sdc_scissor/sdc_prioritizer/datasets/fullroad/BeamNG_AI/BeamNG_RF_2/: BeamNG_RF_2_Complete.csv
sdc_scissor/sdc_prioritizer/datasets/fullroad/Driver_AI/: DriverAI_Complete.csv
sdc_scissor/sdc_prioritizer/docker_scripts/: build-test-prioritization-image.sh  run-test-prioritization-container.sh
sdc_scissor/sdc_prioritizer/testPrioritization/: README.md  run.py
sdc_scissor/sdc_prioritizer/testPrioritization/crossover/: PMX.py
sdc_scissor/sdc_prioritizer/testPrioritization/mutation/: HybridMut.py
sdc_scissor/sdc_prioritizer/testPrioritization/problem/: TestPrioritizationMultiObjectiveProblem.py
(+442 files in other folders)
