[metadata]
name = testPrioritization
version = 0.0.1

[options]
packages = testPrioritization
install_requires =
    requests
    importlib; python_version == "3.9.1"

# [mutmut]
# paths_to_mutate = testPrioritization/
# backup = False
# tests_dir = pd/
# dict_synonyms = Struct, NamedStruct

[flake8]
max-line-length = 100
